[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "optimal_power_flow"
version = "0.0.1"
description = "A pipeline for training data for deep-learning based OPF prediction"
authors = [
  { name = "Wyatt Boyer" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["optimal_power_flow"]
force_sort_within_sections = true
